--- a/SpringBootWorkSpace/Project4SpringBoot/pom.xml
+++ b/SpringBootWorkSpace/Project4SpringBoot/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>jnanoid</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<!-- JSON -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20210307</version>
+		</dependency>
 	</dependencies>
 
 
@@ -75,4 +81,5 @@
 		</plugins>
 	</build>
 
+	
 </project>
