--- a/SpringBootWorkSpace/Project4SpringBoot/src/main/resources/application.properties
+++ b/SpringBootWorkSpace/Project4SpringBoot/src/main/resources/application.properties
@@ -18,3 +18,5 @@ server.servlet.context-path=/project4
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
 
+spring.servlet.multipart.max-file-size=12800KB
+spring.servlet.multipart.max-request-size=12800KB
