--- a/SpringBootWorkSpace/Project4SpringBoot/pom.xml
+++ b/SpringBootWorkSpace/Project4SpringBoot/pom.xml
@@ -79,6 +79,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		
+		        <!-- 寄信 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>	
+		
 	</dependencies>
 
 
